plugins {
    id 'com.android.application'
}

android {
    namespace 'com.hk.hkterminal'
    compileSdk 34

    defaultConfig {
        applicationId "com.hk.hkterminal"
        minSdk 21
        targetSdk 34
        versionCode 1
        versionName "1.0"
    }

    // ==========================================
    // [!] HK-OPERATION: NATIVE C++ KERNEL LINK [!]
    // ==========================================
    externalNativeBuild {
        cmake {
            path "src/main/cpp/CMakeLists.txt"
            version "3.10.2"
        }
    }
    // ==========================================

    signingConfigs {
        release {
            storeFile file("hk_key.jks") 
            storePassword System.getenv("SIGNING_STORE_PASSWORD")
            keyAlias System.getenv("SIGNING_KEY_ALIAS")
            keyPassword System.getenv("SIGNING_KEY_PASSWORD")
        }
    }

    buildTypes {
        release {
            signingConfig signingConfigs.release 
            minifyEnabled false
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

repositories {
    google()
    mavenCentral()
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.9.0'
}
